Since 0.2.16
  - fix bugs with TB 3
  - allow it to run with TB 3.0b1

0.2.16
  - allow it to run with TB 3.0
  - added an explicit license file (zlib/libpng-like)
  - bug fix: RETURN did not work in QuickSearch when searching in message bodies
  - suggest to create a folder when it does not exist (for Go/Copy/Move operations)

0.2.15
  - bug fix: the G command did not work when QuickSearch is not shown in 
    the toolbar
  - bug fix: in some situations, some keys were lost just after
    the Nostalgy box was opened
  - remove some harmless errors in the Error Console

0.2.14
  - don't capture keys when another widget want them (e.g. a menu popup)
  - moving dev repository from CVS to SVN with public access
  - when cycling with "`" is over, restore the last search mode
  - fix a bug that closed the Nostalgy completion box in wrong cases

0.2.13
  - a system to export and import Nostalgy's rules (through e-mails)
  - change the behavior of the QuickSearch box: 
    * the search criterion can be changed with UP/DOWN and the view
      is automatically updated
    * the menu that shows the current search criterion is shown
      when one of CONTROL or ALT is pressed (when the QuickSearch box
      if focused); an option in the preference dialog will force
      the menu to be always displayed when the QuickSearch box is focused
    * RETURN (customizable): start the search, select the last result, 
      focus thread pane
    * CTRL-RETURN (customizable): same, but select all results
    * ESCAPE: cancel search, focus thread pane
  - before starting to type in the completion box, the popup lists
    the 5 more recently selected folders (to be selected with up/down)
  - new "Save and Go" feature

  - double-clicking on a rule in the pref dialog to edit it
  - in the rule edit dialog, don't let folder completion captures TAB
  - make Nostalgy work with TB 3.0 (tested with 3.0a1pre)
  - Thunderbirds shortcuts that are hidden by Nostalgy can now